お問い合わせ-完了&404ページ /背景色追加

--- a/wordpress/html/wp-content/themes/newcatsite/assets/css/common.css
+++ b/wordpress/html/wp-content/themes/newcatsite/assets/css/common.css
@@ -78,7 +78,7 @@ a {
       font-size: 30px;
       font-weight: bold;
       padding-top: 15px;
-
+      text-align: center;
     }
     .heading-title__sub {
       color: #CEB967;
